<resources>
    <string name="app_name">AAA</string>
    <string name="app_slogan">The World\'s Loudest Instant Messaging Service</string>

    <string name="login_button">Log in</string>
    <string name="register_button">Register</string>

    <string name="friends_request_button_default">Send Friend Request</string>
    <string name="friends_request_button_sent">Friend Request Pending</string>
    <string name="remove_friend_button">Remove Friend</string>
    <string name="remove_friend_yes_no">Really unfriend?</string>
    <string name="shout_button">Shout at </string>
    <string name="record_button">Send a Sound Clip</string>
    <string name="messages_button">View Messages</string>

    <string name="register_activity_title">Register</string>
    <string name="login_activity_title">Log in</string>

    <string name="add_friends_button">Add Friends</string>

    <string name="no_results">No Results</string>
    <string name="no_internet_connection">Unable to fetch results.</string>
    <string name="no_friend_requests">No friend requests.</string>

    <string name="toast_bad_email_format">Please enter a valid email address.</string>
    <string name="toast_bad_username">No account with the provided Username or Email exists.</string>
    <string name="toast_bad_password">Incorrect password, please try again.</string>
    <string name="toast_empty_fields">Please fill out all the fields before proceeding.</string>
    <string name="toast_registration_success">Registration completed successfully!</string>
    <string name="toast_duplicate_username">Username already exists. Please choose a different username.</string>
    <string name="toast_lost_username">Cannot find username. Please close the app and try again.</string>

    <string name="toast_failed_login">Log in failed. Please check your credentials and try again.</string>

    <string name="toast_error_generic">Something went wrong. Please try again.</string>
    <string name="toast_failed_server_connection">Failed to connect to server. Please try again.</string>

    <string name="friend_removed_successfully">Friend has been successfully removed.</string>
    <string name="friends_request_sent">The friend request has been sent!</string>
    <string name="friends_request_reject">Friend Request deleted.</string>
    <string name="friends_request_accept">Friend has been added!</string>

    <string name="server_response_success">success</string>
    <string name="server_response_username">username</string>
    <string name="server_response_password">password</string>

    <string name="search_hint">Search Users</string>

    <string name="received_a_friend_request">sent you a friend request.</string>
    <string name="accept_request">Accept</string>
    <string name="deny_request">Deny</string>

    <string name="profile">Profile</string>
    <string name="inbox">Inbox</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="log_out">Log out</string>
</resources>
